# python-dijay

./: .gitignore  LICENSE  Makefile  README.md  coverage_output.txt  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
dijay/: __init__.py  container.py  decorators.py  inject.py  module.py  provider.py
docs/: api.md  getting-started.md  index.md
docs/guides/: fastapi.md  injection.md  lifecycle.md
docs/recipes/: fastapi.md  lifecycle.md  modules.md  providers.md
recipes/: README.md
recipes/fastapi/: README.md  pyproject.toml
recipes/fastapi-ddd/: Makefile  README.md  pyproject.toml
recipes/fastapi-ddd/src/: __main__.py
recipes/fastapi-ddd/src/application/: __init__.py
recipes/fastapi-ddd/src/application/_shared/: __init__.py  usecase.py
recipes/fastapi-ddd/src/application/todo/: __init__.py  delete_todo.py  list_todo.py  update_todo.py
recipes/fastapi-ddd/src/domain/_shared/: __init__.py  entities.py  ports.py  pydantic.py
recipes/fastapi-ddd/src/domain/todo/: __init__.py  errors.py
recipes/fastapi-ddd/src/infrastructure/: __init__.py  module.py
recipes/fastapi-ddd/src/infrastructure/database/: __init__.py
recipes/fastapi-ddd/src/infrastructure/database/fake/: __init__.py  database.py  module.py
recipes/fastapi-ddd/src/infrastructure/database/fake/repositories/: __init__.py  todo.py
recipes/fastapi-ddd/src/presentation/: __init__.py  module.py
recipes/fastapi-ddd/src/presentation/http/: __init__.py  config.py  server.py
recipes/fastapi-ddd/src/presentation/http/_shared/: __init__.py  decorators.py  utils.py
recipes/fastapi-ddd/src/presentation/http/todo/: __init__.py  route.py
recipes/fastapi-ddd/src/presentation/http/todo/dtos/: __init__.py
recipes/fastapi/src/: main.py  module.py
recipes/fastapi/src/application/: module.py
recipes/fastapi/src/application/todo/: __init__.py  create_todo.py  get_todo_by_id.py  module.py
recipes/fastapi/src/domain/_shared/: __init__.py  errors.py
recipes/fastapi/src/domain/todo/: __init__.py  entities.py  repositories.py
recipes/fastapi/src/infrastructure/database/: module.py
recipes/fastapi/src/infrastructure/database/fake/: __init__.py  error.py
recipes/fastapi/src/presentation/http/: __init__.py  module.py
recipes/fastapi/src/presentation/http/_shared/: utils.py
recipes/fastapi/src/presentation/http/todo/: __init__.py
recipes/fastapi/src/presentation/http/todo/dtos/: __init__.py  create_todo.py  list_todo.py  update_todo.py
tests/: test_container.py  test_lifecycle.py  test_module_decorators.py  test_module_method_decorators.py  test_modules.py
