[project]
name = "dijay"
version = "0.3.17"
description = "The 'remix' your architecture needs: NestJS-style modularity, native async performance, and rigorous typing for Python 3.14+. Less boilerplate, more harmony."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Leandro Santiago Gomes", email = "leandroluk@gmail.com" }]
keywords = ["dependency-injection", "async", "nestjs", "solid", "type-hints"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["ruff>=0.15.1"]

[project.urls]
Homepage = "https://github.com/leandroluk/dijay"
Repository = "https://github.com/leandroluk/dijay"
Issues = "https://github.com/leandroluk/dijay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.23",
    "mkdocstrings-python>=2.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["dijay"]

[tool.uv.workspace]
members = ["recipes/*"]

[tool.uv.sources]
dijay = { workspace = true }
