[project]
name = "dijay"
version = "0.3.13"
description = "The 'remix' your architecture needs: NestJS-style modularity, native async performance, and rigorous typing for Python 3.13+. Less boilerplate, more harmony."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Leandro Santiago Gomes", email = "leandroluk@gmail.com" }]
keywords = ["dependency-injection", "async", "nestjs", "solid", "type-hints"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["ruff>=0.15.1"]

[project.urls]
Homepage = "https://github.com/leandroluk/dijay"
Repository = "https://github.com/leandroluk/dijay"
Issues = "https://github.com/leandroluk/dijay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.2",
  "mypy>=1.19.1",
  "mkdocs-material>=9.7.3",
  "mkdocstrings[python]>=1.0.3",
  "zensical>=0.0.23",
  "mkdocstrings-python>=2.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["dijay"]
exclude = ["tests/", "venv/", ".venv/"]
warn_return_any = true
warn_unused_configs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

[tool.coverage.run]
relative_files = true

[tool.uv.workspace]
members = ["recipes/*"]

[tool.uv.sources]
dijay = { workspace = true }

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/tests", "**/.venv", "**/venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportImplicitStringConcatenation = false
reportUnknownMemberType = "information"
reportUnknownArgumentType = "information"
reportUnknownLambdaType = "information"
reportMissingTypeStubs = false
reportUnusedImport = "information"
reportUnusedVariable = "information"
reportUnknownVariableType = "information"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportInvalidTypeVarUse = "none"
